fixed button being hidden by task list bar

--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -316,6 +316,10 @@ view-only-task-list {
     }
 }
 
+pomo-timer {
+    margin-bottom: 10%;
+}
+
 .timer-container {
     // width: 400px;
     // height: 400px;
